# lambda_intro

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  handler.py  handlerTest.py  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/_templates/: badges.html
lambda_intro/: common.py
lambda_intro/aws/: utils.py
